--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     --page-color: rgb(210, 210, 225);
     --title-color: lightblue;
     --accent-color: rgb(120, 165, 175);
+    --dark-accent: rgb(1, 13, 82);
 }
 
 body {
@@ -13,8 +14,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-image: url("../images/header.jpg");
-    background-repeat: no-repeat;
+    background-color: darkblue;
     background-size: 200%;
     padding: 5% 0;
     max-height: 100px;
@@ -49,13 +49,65 @@ nav a:hover {
 
 .subtitle {
     display: block;
-    position: relative;
-    
-    background-color: var(--title-color);
+    background-image: url("../images/header.jpg");
+    background-repeat: no-repeat;
+    padding: 5% 0;
+    max-height: 100px;
 }
 
 .subtitle h2 {
+    position: absolute;
+    right: 50px;
+    top: 220px;
+    background-color: var(--title-color);
+    margin-right: 0px;
+}
 
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+main section {
+    display: flex;
+    padding: 100px 50px;
+}
+
+main section h3 {
+    font-size: 24px;
+    color: var(--dark-accent);
+    border-right: solid 3px var(--dark-accent);
+    padding-right: 20px;
+}
+
+main section article {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 20px;
+}
+
+main section article p {
+    color: var(--dark-accent);
+    line-height: 1.5;
+    text-align: justify;
+}
+
+.portfolio div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card {
+    flex: 1 0 15%;
+    padding: 10%;
+}
+
+.featured {
+    flex: 2 0 50%;
+    padding: 40%;
 }
 
 @media screen and (max-width: 724px) {
