--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Variables for reused colors */
 :root {
     --page-color: rgb(210, 210, 225);
     --title-color: lightblue;
@@ -5,11 +6,13 @@
     --dark-accent: rgb(1, 13, 82);
 }
 
+/* Page font and background color */
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--page-color);
 }
 
+/* Title, subtitle and nav */
 header {
     display: flex;
     justify-content: space-between;
@@ -63,6 +66,7 @@ nav a:hover {
     margin-right: 0px;
 }
 
+/* Main body flexbox */
 main {
     display: flex;
     flex-direction: column;
@@ -78,8 +82,10 @@ main section h3 {
     color: var(--dark-accent);
     border-right: solid 3px var(--dark-accent);
     padding-right: 20px;
+    flex: 1 0 10%;
 }
 
+/* About Me */
 main section article {
     display: flex;
     flex-direction: column;
@@ -94,11 +100,13 @@ main section article p {
     text-align: justify;
 }
 
+/* Portfolio */
 .portfolio div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    flex: 2 0 500px;
 }
 .card {
     flex: 1 0 15%;
@@ -106,8 +114,13 @@ main section article p {
 }
 
 .featured {
-    flex: 2 0 50%;
+    flex: 2 0 200px;
     padding: 40%;
+}
+
+/* Contact Me */
+.contact ul {
+    display: inline;
 }
 
 @media screen and (max-width: 724px) {
