--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,160 +1,166 @@
 /* Variables for reused colors */
 :root {
-    --page-color: rgb(210, 210, 225);
-    --title-color: lightblue;
-    --accent-color: rgb(120, 165, 175);
-    --dark-accent: rgb(1, 13, 82);
+  --page-color: rgb(210, 210, 225);
+  --title-color: lightblue;
+  --accent-color: rgb(120, 165, 175);
+  --dark-accent: rgb(1, 13, 82);
 }
 
 /* Page font and background color */
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: var(--page-color);
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--page-color);
 }
 
 /* Title, subtitle and nav */
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: darkblue;
-    background-size: 200%;
-    padding: 5% 0;
-    max-height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: darkblue;
+  background-size: 200%;
+  padding: 5% 0;
+  max-height: 100px;
 }
 
 header h1 {
-    padding: 0.5%;
-    font-size: 48px;
-    background-color: var(--title-color);
-    border: solid 2px var(--accent-color);
-    border-radius: 5px;
+  padding: 0.5%;
+  font-size: 48px;
+  background-color: var(--title-color);
+  border: solid 2px var(--accent-color);
+  border-radius: 5px;
 }
 
 nav {
-    flex: 1 0;
-    text-align: end;
+  flex: 1 0;
+  text-align: end;
 }
 
 nav a {
-    color: cyan;
-    text-decoration: none;
-    padding: 0.5%;
-    font-size: 24px;
-    border-bottom: solid 3px cyan;
-    margin: 0 5px;
+  color: cyan;
+  text-decoration: none;
+  padding: 0.5%;
+  font-size: 24px;
+  border-bottom: solid 3px cyan;
+  margin: 0 5px;
 }
 
 nav a:hover {
-    color: magenta;
-    border-color: magenta;
+  color: magenta;
+  border-color: magenta;
 }
 
 .subtitle {
-    display: block;
-    background-image: url("../images/header.jpg");
-    background-repeat: no-repeat;
-    padding: 5% 0;
-    max-height: 100px;
+  display: block;
+  background-image: url("../images/header.jpg");
+  background-repeat: no-repeat;
+  padding: 5% 0;
+  max-height: 100px;
 }
 
 .subtitle h2 {
-    position: absolute;
-    right: 50px;
-    top: 220px;
-    background-color: var(--title-color);
-    margin-right: 0px;
+  position: absolute;
+  right: 50px;
+  top: 220px;
+  background-color: var(--title-color);
+  margin-right: 0px;
 }
 
 /* Main body flexbox */
 main {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 main section {
-    display: flex;
-    padding: 100px 50px;
+  display: flex;
+  padding: 100px 50px;
 }
 
 main section h3 {
-    font-size: 24px;
-    color: var(--dark-accent);
-    border-right: solid 3px var(--dark-accent);
-    padding-right: 20px;
-    flex: 1 0 10%;
+  font-size: 24px;
+  color: var(--dark-accent);
+  border-right: solid 3px var(--dark-accent);
+  padding-right: 20px;
+  flex: 1 0 10%;
 }
 
 /* About Me */
 main section article {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 20px;
 }
 
 main section article p {
-    color: var(--dark-accent);
-    line-height: 1.5;
-    text-align: justify;
+  color: var(--dark-accent);
+  line-height: 1.5;
+  text-align: justify;
 }
 
 /* Portfolio */
 #portfolio div {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex: 2 0 25%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex: 2 0 25%;
 }
 .card {
-    flex: 1 0 15%;
-    padding: 10%;
+  flex: 1 0 15%;
+  padding: 10%;
 }
 
 .featured {
-    flex: 2 0 200px;
-    padding: 20%;
+  flex: 2 0 200px;
+  padding: 20%;
 }
 
 /* Contact Me */
 .contact ul {
-    display: inline;
+  display: inline;
 }
 
 h4 {
-    font-size: large;
-    padding: 0.2em;
-    border: solid 1px black;
-    background-color: var(--dark-accent);
-    border-radius: 2px;
-    align-self: flex-end;
+  font-size: large;
+  padding: 0.2em;
+  border: solid 1px black;
+  background-color: var(--dark-accent);
+  border-radius: 2px;
+  align-self: flex-end;
 }
 
 h4 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #pokewire {
-    background-image: url("../images/pokewire-screenshot.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../images/pokewire-screenshot.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #mtgpp {
-    background-image: url("../images/mtgpp-screenshot.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../images/mtgpp-screenshot.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#outta-touch {
+  background-image: url("../images/outta-touch-screenshot.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media screen and (max-width: 724px) {
-    header {
-        flex-direction: column;
-        justify-content: center;
-    }
+  header {
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    nav {
-        margin-top: 10px;
-    }
+  nav {
+    margin-top: 10px;
+  }
 }
